--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ main_module = lib/WebService/CoinSpot.pm
 ; Stuff that generates files
 [CPANFile]
 [GithubMeta]
+[NextRelease] ; Mark up the next release in changes
 [MetaJSON]
 [MetaTests]
 [ModuleBuild]
