--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name = WebService-CoinSpot
-version = 0.001
-author = Dean Hamstead <dean@bytefoundry.com.au>
+version = 0.002
+author = Dean Hamstead <djzort@cpan.org>
 license = Perl_5
 copyright_holder = Dean Hamstad
 copyright_year = 2017
@@ -13,6 +13,7 @@ main_module = lib/WebService/CoinSpot.pm
 ; Stuff that generates files
 [CPANFile]
 [GithubMeta]
+issues = 1
 [NextRelease] ; Mark up the next release in changes
 [MetaJSON]
 [MetaTests]
@@ -33,7 +34,10 @@ critic_config = t/.perlcriticrc
 [Test::PodSpelling]
 stopword = RESTful
 stopword = AUD
-stopword = Crypto
+stopword = CryptoCurrency
+stopword = BitCoin
+stopword = Monero
+stopword = Ethereum
 stopword = cancelbuy
 stopword = cancelsell
 stopword = myorders
@@ -75,6 +79,7 @@ except = ^\.travis.yml
 [Prereqs]
 perl               = 5.8.0
 Moo                = 0
+CryptX             = 0
 namespace::clean   = 0
 WebService::Client = 0.0601
 
